2010-05-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/ListWidget.cs: Fix 'Bug
	  603344 - Matching in completion list'.

2010-05-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.csproj: Disable overflow checks.

2010-05-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide/Ide.cs:
	* MonoDevelop.Ide/ProjectOperations.cs: Delay project service
	  loading.

2010-05-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide/ProjectOperations.cs: Fixed 'Bug 603119 -
	  Go-to-definition doesn't work with locals'.

2010-05-06  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components/CompactScrolledWindow.cs: Shrink
	  spacing more.

2010-05-06  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui.Components/ExtensibleTreeView.cs: Fix
	  cmd-scroll zoom on Mac. Use more conventional direction for
	  zooming.

2010-05-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Workbench.cs: Removed some event
	  handlers on close.

2010-05-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/NavigationHistoryService.cs: Take out
	  event handler.

2010-05-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/TooltipWindow.cs: FIX leak caused by
	  transparency decorators.

2010-05-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.CustomTools/CustomToolService.cs: Better
	  warning message.

2010-05-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.CustomTools/CustomToolService.cs: Cancel
	  running tasks before re-running generator on same file.

2010-05-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.CustomTools/CustomTool.cs:
	* MonoDevelop.Ide.CustomTools/CustomToolService.cs:
	* MonoDevelop.Ide.Extensions/CustomToolExtensionNode.cs: Make
	  custom tools cancellable, and add an output pad for viewing
	  their output and cancelling them.

2010-05-04  Lluis Sanchez Gual  <lluis@novell.com>
