@@ -356,7 +356,7 @@ namespace MonoDevelop.Ide.CodeTemplates
 		
 		public TemplateResult InsertTemplate (MonoDevelop.Ide.Gui.Document document)
 		{
-			ProjectDom dom = ProjectDomService.GetProjectDom (document.Project) ?? ProjectDomService.GetFileDom (document.FileName);
+			ProjectDom dom = document.Dom;
 			ParsedDocument doc = document.ParsedDocument ?? MonoDevelop.Projects.Dom.Parser.ProjectDomService.GetParsedDocument (dom, document.FileName);
 			MonoDevelop.Ide.Gui.TextEditor editor = document.TextEditor;
 
